--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 	❗ We 𝐬𝐭𝐚𝐫𝐭 𝐞𝐚𝐫𝐥𝐢𝐞𝐫 to avoid congestion on Solana and give everyone a fair chance to mint. (PUBLIC CAN MINT!)
 
     🏷️𝗦𝗮𝗹𝗲 𝗜𝗻𝗳𝗼
-    🔹 Mint Price: 2.25 SOL
+    🔹 Mint Price: 1.5 SOL
     🔸 Supply: 5,555
 
     ❗ Do not click any other links, stay safe!
@@ -47,7 +47,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Mint Page</title>
+    <title>Magic Eden</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
